--- a/report/progress.tex
+++ b/report/progress.tex
@@ -18,11 +18,12 @@ To implement $k$-NN algorithm, we first need to define the neighbors of each bus
 Business A is the neighbor of business B, iff $category_A \cap category_B \neq \varnothing$.
 \end{defn}
 
-In this way, the popularity of a certain business can be inferred by its neighbor in the same category. This is exactly the idea of $k$-NN algorithm. We implemented a 10-fold cross-validation. Specifically, in each round, we take one fold as test set and the remaining nine folds as training set. For each business in the test set, the average star rating of its $k$ nearest neighbors would be its predicted rating. For evaluation, mean squared error (MSE) is used to quantify the difference between predicted values $\hat{Y}_i$ and the ground truth $Y_i$.
+In this way, the popularity (stars) of a certain business can be inferred by its neighbor in the same category. This is exactly the idea of $k$-NN algorithm. We implemented a 10-fold cross-validation. Specifically, in each round, we take one fold as test set and the remaining nine folds as training set. For each business in the test set, the average star rating of its $k$ nearest neighbors would be its predicted rating. For evaluation, mean squared error (MSE) is used to quantify the difference between predicted values $\hat{Y}_i$ and the ground truth $Y_i$.
 
 $$MSE=\frac{1}{n}\sum_{i=1}^{n}(\hat{Y}_i-Y_i)^2$$
 
 In the experiments, we set $k$ to $5$. The final experimental result is $0.879 \pm 0.034$ (mean $\pm$ std).
+Notice that $Y_i$ range from 1 to 5.
 
 \subsection{What remains to be done}
 
