add result figure

--- a/report/header_www.tex
+++ b/report/header_www.tex
@@ -15,6 +15,7 @@
 \usepackage{booktabs}
 \usepackage{pgffor}
 \usepackage{tikz}
+\usepackage{epstopdf}
 
 \newcommand{\ie}[0]{\textit{i.e.}}
 \newcommand{\eg}[0]{\textit{e.g.}}
